# 9-am-projects

./: README.md  pyproject.toml
day-01-docs-text-summarizer/: summarizer.ipynb
day-02-log-explainer/: log-explainer.ipynb
day-03-grammer-checker/: grammer-checker.ipynb
day-04-commit-msg-generator/: commit-msg-generator.ipynb
day-05-brouchure-generator/: brouchure-generator.ipynb
day-06-smart-error-search/: smart-error-search.ipynb
day-07-tool-calling/: tool-calling.ipynb
day-08-response-format/: response-format.ipynb
day-09-prompt-quality-checker/: propmpt-quality-checker.ipynb
day-10-Prompt-Length&Clarity-Checker/: prompt-length-calrity-checker.ipynb
